k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service

spec:
  selector:
    app: user-service

  type: ClusterIP

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
