k8s/09-nginx-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-metrics
  namespace: m
  labels:
    app: nginx-ingress-metrics

spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/name: ingress-nginx

  ports:
    - name: metrics
      port: 10254
      targetPort: 10254
      protocol: TCP

  type: ClusterIP
