k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: arch.homework

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: user-service
                port:
                  number: 8000
